--- a/express/index.html
+++ b/express/index.html
@@ -64,7 +64,7 @@
         //    var dataSetObj = snapshot.val(), text= "";
         //     document.getElementById('title').textContent=dataSetObj;
         // });
-        myName.set('rick3');
+        //myName.set('rick3');
         myName.on('value',function(snapshot){
           
             var dataSetObj = snapshot.val();
